<resources>
    <string name="app_name">EShop</string>
    <string name="app_version">V 1.0.0</string>
    <string name="app_copy">\'@ JIAT App\'</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">Orders</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_cart_title">Cart</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_settings_title">Settings</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>
    <string name="bottom_nav_home_title_text">Home</string>
    <string name="bottom_nav_category_text">Category</string>
    <string name="bottom_nav_cart_title_text">Cart</string>
    <string name="bottom_nav_profile_title_text">Account</string>
    <string name="search_bar_hint_text">Search Here</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="sign_in_title_text">Sign In to EShop</string>
    <string name="sign_in_email_title_text">Email</string>
    <string name="email_input_hint_text">user@example.com</string>
    <string name="signin_password_hint_text"> at least 6 characters (EX: ABC,!#$@%,123)</string>
    <string name="signin_password_title_text">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="create_a_new_account_text">or create a new account?</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up_title_text">Sign Up to EShop</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="re_password_title_text">Re-Password</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="sign_up_name_title_text">Name</string>
</resources>