<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:checked="true"
        android:icon="@drawable/home_24px"
        android:iconTint="@color/nav_item_colors"
        android:title="@string/side_nav_home_title" />

    <item
        android:icon="@drawable/account_circle_24px"
        android:title="@string/side_nav_profile_title" />

    <item
        android:icon="@drawable/orders_24px"
        android:title="@string/side_nav_orders_title" />

    <item
        android:icon="@drawable/favorite_24px"
        android:title="@string/side_nav_wishlist_title" />

    <item
        android:icon="@drawable/shopping_cart_24px"
        android:title="@string/side_nav_cart_title" />

    <item
        android:icon="@drawable/inbox_text_24px"
        android:title="@string/side_nav_message_title" />

    <item
        android:icon="@drawable/settings_24px"
        android:title="@string/side_nav_settings_title" />

    <group>
        <item
            android:icon="@drawable/login_24px"
            android:title="@string/side_nav_login_title" />
        <item
            android:icon="@drawable/logout_24px"
            android:title="@string/side_nav_logout_title" />
    </group>
</menu>