<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_title_text"
        android:textColor="@color/md_theme_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_email_title_text"
        android:textColor="@color/md_theme_secondary"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/email_input_hint_text"
        android:inputType="textEmailAddress"
        android:textColor="@color/md_theme_secondary"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signin_password_title_text"
        android:textColor="@color/md_theme_secondary"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/signin_password_hint_text"
        android:inputType="textPassword"
        android:textColor="@color/md_theme_secondary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/md_theme_secondary"
        android:textSize="12sp"
        android:textStyle="italic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_layout_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_button_text"
        android:textColor="@color/md_theme_onPrimary"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/create_a_new_account_text"
        android:textColor="@color/md_theme_secondary"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_layout_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/md_theme_onPrimary"
        android:textSize="12sp" />

</LinearLayout>